# AoC

./: .gitignore
2024/: .golangci.yaml  AoC2024.sln  Makefile  go.mod  main.go  stats.txt
2024/Dotnet/: AoCBenchmark.cs  ConsoleExtensions.cs  Day14.cs  Day5.cs  Day7.Benchmark.cs  Day7.cs  Dotnet.csproj  InputReader.cs  Program.cs
2024/Dotnet.Test/: Day14Tests.cs  Day5Tests.cs  Day7Tests.cs  Dotnet.Test.csproj  TestInputReader.cs
2024/cpp/: Makefile  main.cpp  solution
2024/day1/: day1.go  day1_test.go
2024/day10/: day10.go  day10_test.go
2024/day11/: day11.go  day11_test.go
2024/day12/: day12.go  day12_test.go
2024/day13/: day13.go  day13_test.go
2024/day15/: day15.go  day15_test.go
2024/day2/: day2.go  day2_test.go
2024/day3/: day3.go  day3_test.go
2024/day4/: day4.go  day4_test.go
2024/day5/: day5.go  day5_test.go
2024/day5/AoC2024.Day5.Test/: AoC2024.Day5.Test.csproj  UnitTest1.cs
2024/day6/: day6-attempt2.go  day6.go  day6_test.go
2024/day7/: day7.go  day7_test.go  operations.go
2024/day8/: day8.go  day8_test.go
2024/day9/: day9.go  day9_test.go
2024/profiles/: cpu-day6.prof
2024/shared/: assignment.go  collectionUtils.go  input.go
cpp/: .gitignore  CMakeLists.txt  InputUtils.cpp  InputUtils.h
cpp/2015/: day0.cpp  day1.cpp  day2.cpp  day3.cpp  day4.cpp
cpp/2015/src/: day1.cpp
cpp/2015/tests/: day1-test.cpp
cpp/inc/QuickDigest5/: quickdigest5.hpp
cpp/lib/QuickDigest5/: quickdigest5.cpp
dotnet/AoC/: .editorconfig  .gitignore  AoC.sln  Directory.Build.props  Directory.Packages.props
dotnet/AoC/AoC2015/: Day0.cs  (+17 more)
(+34 files in other folders)
